--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "dependencies": {
     "@react-google-maps/api": "^2.20.7",
     "firebase": "^12.0.0",
+    "leaflet": "^1.9.4",
     "next": "15.4.5",
     "next-pwa": "^5.6.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.61.1",
     "react-icons": "^5.5.0",
+    "react-leaflet": "^5.0.0",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
