--- a/functions/package.json
+++ b/functions/package.json
@@ -2,7 +2,6 @@
   "name": "functions",
   "description": "Cloud Functions for Firebase",
   "scripts": {
-    "lint": "eslint .",
     "serve": "firebase emulators:start --only functions",
     "shell": "firebase functions:shell",
     "start": "npm run shell",
@@ -15,7 +14,8 @@
   "main": "index.js",
   "dependencies": {
     "firebase-admin": "^12.7.0",
-    "firebase-functions": "^6.4.0"
+    "firebase-functions": "^4.0.0",
+    "idb-keyval": "^6.2.2"
   },
   "devDependencies": {
     "eslint": "^8.15.0",
