--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@react-google-maps/api": "^2.20.7",
+    "eslint-config-google": "^0.14.0",
     "firebase": "^12.0.0",
+    "idb-keyval": "^6.2.2",
     "leaflet": "^1.9.4",
     "next": "15.4.5",
     "next-pwa": "^5.6.0",
@@ -29,7 +31,7 @@
     "@types/node": "^20.19.11",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
-    "eslint": "^9",
+    "eslint": "^8.15.0",
     "eslint-config-next": "15.4.5",
     "tailwindcss": "^4",
     "typescript": "^5.9.2"
