--- a/package.json
+++ b/package.json
@@ -31,8 +31,10 @@
     "@types/node": "^20.19.11",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
-    "eslint": "^8.15.0",
-    "eslint-config-next": "15.4.5",
+    "@typescript-eslint/eslint-plugin": "^8.40.0",
+    "@typescript-eslint/parser": "^8.40.0",
+    "eslint": "^8.57.1",
+    "eslint-config-next": "^15.4.5",
     "tailwindcss": "^4",
     "typescript": "^5.9.2"
   }
